@@ -24,6 +24,8 @@ m4_include([m4/m4-ax_boost_system.m4])
 m4_include([m4/m4-ax_boost_filesystem.m4])
 m4_include([m4/m4-ax_boost_program_options.m4])
 m4_include([m4/m4-ax_boost_regex.m4])
+m4_include([m4/m4-ax_boost_iostreams.m4])
+m4_include([m4/m4-ax_check_zlib.m4])
 
 lt_enable_auto_import=""
 case "$host_os" in 
@@ -293,6 +295,8 @@ AX_BOOST_SYSTEM
 AX_BOOST_FILESYSTEM
 AX_BOOST_PROGRAM_OPTIONS
 AX_BOOST_REGEX
+AX_BOOST_IOSTREAMS
+AX_CHECK_ZLIB([], [])
 
 
 ############  CHECKS  ############################################
